# filesystem

./: CMakeLists.txt
cmake/: Util_ExportConfig.cmake  Util_InstallConfig.cmake  Util_InstallRules.cmake  filesystemConfig.cmake.in
include/filesystem/: BuneNamespace.h  FilesystemNamespace.h  Types.h
include/filesystem/compatibility/: AlignmentMacros.h  BranchPrediction.h  CallingConventions.h  Compatibility.h  CompilerDetection.h  CxxVersionDetection.h  FunctionAttributes.h  Inline.h  LanguageFeatures.h  MemoryMacros.h  Nodiscard.h  ProcessorDetection.h  SimdCompatibility.h  StackProtection.h  StaticOperators.h  SystemDetection.h  UnreachableCode.h  Warnings.h
include/filesystem/io/: File.h  Path.h
src/filesystem/: Assert.h  Flags.h  IsCharacter.h  Options.h
src/filesystem/io/: Buffer.h  ConstBuffer.h  ConsumingBuffer.h  Exceptions.h  FileData.h  FileOperations.h  FileOperationsImpl.cpp  FileOperationsImpl.h  FsOperations.h  MutableBuffer.h  Overlapped.h  PathParser.h  PathTraits.h
src/filesystem/options/: Aggregator.h  As.h  Call.h  Callable.h  Concepts.h  ConditionalCallable.h  DecoratedWith.h  Drop.h  Fetch.h  Foldable.h  Functor.h  If.h  IgnoreNone.h  Keys.h  Keywords.h  Merge.h  Notifiable.h  Option.h  Options.h  SameAs.h  SelectKeys.h  Settings.h  StrictElementwiseCallable.h  TypeOr.h
src/filesystem/string/: Char.h  CharTraits.h  StringConversions.h
src/filesystem/system/: CodePages.h  Handle.h  IoError.h  WindowsErrors.h
tests/: CMakeLists.txt
tests/sync/: CMakeLists.txt  FileTest.cpp  PathTest.cpp
